...
        android:id="@+id/title"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry_title"
        app:layout_constraintLeft_toLeftOf="@+id/category"
        app:layout_constraintTop_toTopOf="@+id/input_title"
        app:layout_constraintBottom_toBottomOf="@+id/input_title"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1" />

    <TextView
        android:id="@+id/category"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry_category"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/input_category"
        app:layout_constraintTop_toTopOf="@+id/input_category" />

    <TextView
        android:id="@+id/subcategory"
        style="@style/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/entry_subcategory"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_subcategory"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/input_subcategory"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/input_title"
...
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="134dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_description"
        android:layout_width="0dp"
        android:layout_height="187dp"
        android:layout_marginBottom="103dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
...
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <ImageButton
        android:id="@+id/btn_pictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:onClick="loadingPopup"
        app:layout_constraintBottom_toTopOf="@+id/input_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_location"
        app:layout_constraintTop_toBottomOf="@+id/subcategory"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageButton
        android:id="@+id/btn_calendar"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_today"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_friends"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toBottomOf="@+id/subcategory"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toTopOf="@+id/input_description"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1" />
...
        app:layout_constraintTop_toBottomOf="@+id/subcategory"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toTopOf="@+id/input_description"
        tools:layout_constraintBottom_creator="1" />

    <Button
        android:id="@+id/btn_save"
        style="@style/ButtonRed"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_description"
        app:layout_constraintVertical_bias="0.475"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/ButtonRed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="41dp"
        android:layout_marginStart="44dp"
...
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/badge_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/badge"
        android:text="0"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
...
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/btn_location"
        app:layout_constraintTop_toTopOf="@+id/btn_location"
        android:layout_marginStart="28dp" />

    <at.sw2017.pocketdiary.MultiSpinner
        android:id="@+id/multi_spinner"
        android:layout_width="253dp"
        android:layout_height="26dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/badge_friends"
        app:layout_constraintRight_toRightOf="@+id/badge_friends"
...
